[package]
name = "cedar-db-example"
edition = "2021"

version = "2.3.0"
license = "Apache-2.0"
categories = ["compilers", "config"]
description = "Database Example for Cedar Policy language."
keywords = ["cedar", "authorization", "policy", "security"]
homepage = "https://cedarpolicy.com"
repository = "https://github.com/cedar-policy/cedar"

[dependencies]
cedar-policy = { version = "=2.3.0", path = "../cedar-policy", features = ["partial-eval"] }
cedar-policy-validator = { version = "=2.3.0", path = "../cedar-policy-validator" }
ref-cast = "1.0"
lazy_static = "1.4"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
miette = { version = "5.9.0", features = ["fancy"] }
thiserror = "1.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3"
glob = "0.3.1"

[lib]
crate_type = ["rlib"]

# We override the name of the binary for src/main.rs, which otherwise would be
# cedar-cli (matching the crate name).
[[bin]]
name = "cedar"
path = "src/main.rs"
