[package]
name = "cedar-db-example"
edition = "2021"

version = "2.3.0"
license = "Apache-2.0"
categories = ["compilers", "config"]
description = "Database Example for Cedar Policy language."
keywords = ["cedar", "authorization", "policy", "security"]
homepage = "https://cedarpolicy.com"
repository = "https://github.com/cedar-policy/cedar"

[dependencies]
cedar-policy = { version = "=2.3.0", path = "../cedar-policy", features = ["partial-eval"] }
cedar-policy-core = { version = "=2.3.0", path = "../cedar-policy-core", features = ["partial-eval"] }
cedar-policy-validator = { version = "=2.3.0", path = "../cedar-policy-validator" }
ref-cast = "1.0"
lazy_static = "1.4"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
miette = { version = "5.9.0", features = ["fancy"] }
thiserror = "1.0"
smol_str = { version = "0.2", features = ["serde"] }
rusqlite = { version = "0.29.0", features = ["bundled"], optional = true }
postgres = { version = "0.19.0", features = ["with-serde_json-1"], optional = true }
sea-query = { git = "https://github.com/magbak/sea-query.git", branch = "parentheses_fix", features = ["backend-postgres", "backend-sqlite", "postgres-array"] }

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3"
glob = "0.3.1"

[lib]
crate_type = ["rlib"]
